--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,21 @@
 
 </head>
 <body>
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'FoodScape', root_path, class: "navbar-brand" %></li>
+        <li><%= link_to 'My Food', my_recipes_path, class: "navbar-link" %></li>
+        <li><%= link_to 'MySelf-ness', edit_user_registration_path, class: "navbar-link" %></li>
+      </ul>
+      <% if user_signed_in? %>
+        <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn navbar-right" %>
+      <% else %>
+        <%= link_to 'Sign In', new_user_session_path, class: "btn btn-default navbar-btn navbar-right"  %>
+        <% end %>
+
+    </div>
+  </nav>
 
 <%= yield %>
 
