--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Recipes#edit</h1>
-<p>Find me in app/views/recipes/edit.html.erb</p>
+<div class="container-fluid">
+  <h1>Edit Recipe</h1>
+
+<%= render 'form' %>
+
+</div>
