--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,48 @@
 <div class="container-fluid">
+  <div class="col-md-offset-4 col-md-6">
+    <h2><strong>Registration</strong></h2>
+  </div>
 
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+     <%= devise_error_messages! %>
 
 <form class="form-horizontal">
-  <div class="form-group">
-    <label for="inputUsername1" class="col-sm-2 control-label">Username</label>
-    <div class="col-sm-10">
+  <div class="form-group form-group-lg">
+    <label class="col-xs-6 col-md-4 control-label" for="inputUsername1">Username</label>
+    <div class="col-md-8">
       <%= f.text_field :username, class:"form-control", id:"inputUsername1", placeholder:"Username" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
+  <div class="form-group form-group-lg">
+    <label class="col-xs-6 col-md-4 control-label" for="inputEmail3">Email</label>
+    <div class="col-md-8">
       <%= f.email_field :email, class:"form-control", id:"inputEmail3", placeholder:"Email" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password
+  <div class="form-group form-group-lg">
+    <label class="col-xs-6 col-md-4 control-label" for="inputPassword3">Password
     <% if @minimum_password_length %>
      <em>(<%= @minimum_password_length %> characters min.)</em>
     <% end %></label>
-    <div class="col-sm-10">
+    <div class="col-md-8">
       <%= f.password_field :password, class:"form-control", id:"inputPassword3", placeholder:"Password" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <label for="inputPassword4" class="col-sm-2 control-label">Password Confirmation</label>
-    <div class="col-sm-10">
-      <%= f.password_field :password_confirmation, class:"form-control", id:inputPassword4, placeholder:"Password Confirmation" %>
+  <div class="form-group form-group-lg">
+    <label class="col-xs-6 col-md-4 control-label" for="inputPassword4" >Password Confirmation</label>
+    <div class="col-md-8">
+      <%= f.password_field :password_confirmation, class:"form-control", id:"inputPassword4", placeholder:"Password Confirmation" %>
     </div>
   </div>
 
   <div class="action-group">
-    <div class="col-sm-offset-2 col-sm-8">
+    <div class="col-md-offset-4 col-md-6">
       <%= f.submit "Sign up", class:"btn btn-default" %>
     </div>
   </div>
   <% end %>
-
- <%= render "devise/shared/links" %>
-</div>
+   </div>
+   <!-- <%= render "devise/shared/links" %> -->
