--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -10,23 +10,24 @@
       </ul>
     </div>
   <% end %>
-  <div class="container-fluid">
+
+  <div class="container">
     <form class="form-horizontal">
       <div class="form group">
-        <label for="inputTitle1" class="col-sm-2 control-label">Title</label>
-        <div class="col-sm-10">
+        <label class="col-xs-6 col-md-4 control-label" for="inputTitle1">Title</label>
+        <div class="col-md-8">
           <%= f.text_field :title, class: "form-control", id:"inputTitle1", placeholder:"Title" %>
         </div>
       </div>
       <div class="form-group">
-        <label for="inputIngred1" class="col-sm-2 control-label">Ingredients</label>
-        <div class="col-sm-10">
+        <label class="col-xs-6 col-md-4 control-label" for="inputIngred1">Ingredients</label>
+        <div class="col-md-8">
           <%= f.text_area :recipe_ingredients, class:"form-control", id:"inputIngred1", placeholder:"Ingredient List", rows: 10 %>
         </div>
       </div>
       <div class="form-group">
-        <label for="inputInstr1" class="col-sm-2 control-label">Instructions</label>
-        <div class="col-sm-10">
+        <label class="col-xs-6 col-md-4 control-label" for="inputInstr1">Instructions</label>
+        <div class="col-md-8">
           <%= f.text_area :recipe_instructions, class:"form-control", id:"inputIngred1", placeholder:"Instructions", rows: 20 %>
         </div>
       </div>
@@ -34,7 +35,7 @@
         <%= f.number_field :user_id, value: current_user.id %>
       </div>
       <div class="action-group">
-        <div class="col-sm-offset-2 col-sm-8">
+        <div class="col-md-offset-4 col-md-6">
           <%= f.submit "Publish", class:"btn btn-default"%>
           <%= link_to 'Back', :back, class:"btn btn-default" %>
         </div>
@@ -42,3 +43,4 @@
     </form>
   </div>
 <% end %>
+<br />
