index and show pages

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Recipes#index</h1>
-<p>Find me in app/views/recipes/index.html.erb</p>
+<h1>FoodScape</h1>
+<p><em>Recipes for the Gastronomical Landscape</em></p>
+  <div class="row">
+    <% @recipes.each do |recipe| %>
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <%=recipe.title %>
+          </div>
+          <div class="panel-body">
+            by <strong><%= link_to recipe.user.username, user_posts_path(id: recipe.user.id) %></strong>
+            <p><span class="posted-at">posted at: <%=recipe.
+            created_at.strftime('%m/%d/%Y at %I:%M%p') %></span></p>
+            <p><%= truncate(recipe.recipe_entry, length:250, separator: ' ') %></p>
+            <%= link_to "Learn More About #{recipe_post.title}", recipe %>
+          </div>
+          <% if current_user.id == recipe.user.id %>
+          <div class="panel-footer">
+            <%= link_to 'Edit', edit_recipe_path(recipe), class: "btn btn-warning" %>
+            <%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+ 
+ <%= link_to 'New Recipe', new_recipe_path %>
