--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,2 +1,49 @@
-<h1>Recipes#show</h1>
-<p>Find me in app/views/recipes/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<div class="panel panel-primary"> 
+  <div class="panel heading">
+    <%= @recipe.title %>
+  </div>
+  
+<div class="panel-body">
+  by <strong><%= link_to @recipe.user.username, 
+  user_recipes_path(id: @recipe.user.id) %></strong>
+  <span class="posted at">posted at: <%= @recipe.created_at.strftime('%m/%d/%Y at %I:%M%p') %></span><br />
+  <p>
+    <%= @recipe.recipe_entry %>
+  </p>
+</div>
+
+<% if current_user.id == @recipe.user.id %>
+<div class="panel-footer">
+  <%= link_to 'Edit', edit_recipe_path(@recipe), class: "btn btn-warning" %>
+  <%= link_to 'Destroy', @recipe, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+</div>
+<% end %>
+
+<div class="panel panel-success">
+  <div class="panel-heading">
+    Write a comment
+</div>
+
+<div class="panel-body">
+  <%= render 'comments/form' %>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4>Comments</h4>
+  </div>
+  <% @recipe.comments.each do |comment| %>
+  <div class="panel panel-success">
+   <div class="panel-body">
+     <p><strong><%= link_to comment.user.username, user_posts_path(id: comment.user.id) %></strong> said: </p>
+     <p><%= comment.comment_entry %></p>
+     <p><span class="posted-at"><%= comment.created_at.strftime ('%m/%d/%Y %H:%M:%S') %></span></p>
+     <%= link_to "Edit Comment", edit_recipe_path(@recipe, comment) %>
+     <%= link_to 'Destroy', [comment.recipe, comment], method: :delete, data: { confirm: 'Are you sure?' } %>
+   </div>
+  <% end %>
+</div>
+<%= link_to 'Back', recipes_path %>
+
