--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -19,6 +19,13 @@
           <%= f.text_field :title, class: "form-control", id:"inputTitle1", placeholder:"Title" %>
         </div>
       </div>
+      <div class="form group">
+        <label class="col-xs-6 col-md-4 control-label" for="inputCategory1">Category</label>
+        <div class="col-md-8">
+          <%= f.text_field :category, class: "form-control", id:"inputCategory1", placeholder:"meal, snack, casserole, mexican, side-dish, etc...." %>
+        </div>
+      </div>
+
       <div class="form-group">
         <label class="col-xs-6 col-md-4 control-label" for="inputIngred1">Ingredients</label>
         <div class="col-md-8">
@@ -31,16 +38,28 @@
           <%= f.text_area :recipe_instructions, class:"form-control", id:"inputIngred1", placeholder:"Instructions", rows: 20 %>
         </div>
       </div>
-      <div class="form-group cant-see-me">
-        <%= f.number_field :user_id, value: current_user.id %>
-      </div>
+      <div class="field form-group">
+        <div class="col-md-4">
+          <%= f.label "Add Photo" %>
+          <%= f.file_field :avatar %>
+          <% if @recipe.avatar_file_name != nil %>
+            <%= image_tag @recipe.avatar.url(:thumb) %>
+            <%= f.label "Remove Photo" %>
+            <%= f.check_box :remove_avatar %>
+          <% end %>
+       </div>
+     </div>
+
       <div class="action-group">
-        <div class="col-md-offset-4 col-md-6">
+        <div class="col-md-6">
           <%= f.submit "Publish", class:"btn btn-default"%>
           <%= link_to 'Back', :back, class:"btn btn-default" %>
         </div>
       </div>
     </form>
+    <div class="form-group cant-see-me">
+      <%= f.number_field :user_id, value: current_user.id %>
+    </div>
   </div>
 <% end %>
 <br />
